# learn_discrete_math

./: .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  default.nix  fake.cpp  travis.sh
.github/workflows/: build.yml
boats/: CMakeLists.txt  README.md  boats.h  test_boats.cpp
find_sum/: CMakeLists.txt  README.md  benchmark_find_sum.cpp  find_sum.h  generator.h  test_find_sum.cpp  test_generator.cpp
nice_numbers13/: CMakeLists.txt  README.md  benchmark_calc.cpp  benchmark_composition_length.cpp  calc.h  composition_length.h  digit.h  number.h  parallel_calculation.h  separate_range.h  test_calc.cpp  test_composition_length.cpp  test_digit.cpp  test_number.cpp  test_parallel_calculation.cpp  test_separate_range.cpp
reverse_words/: CMakeLists.txt  README.md  test_reverse_words.cpp
shortest_way/: benchmark.cpp  main.cpp  shortest_way.cpp  shortest_way.h
towns_generator/: CMakeLists.txt  towns_generator.cmake  towns_generator.cpp
uniteller/: CMakeLists.txt  README.md  digit.cpp  digit.h  group.cpp  group.h  id.cpp  id.h  item.cpp  item.h  symbol.cpp  symbol.h  test_digit.cpp  test_group.cpp  test_id.cpp  test_item.cpp  test_symbol.cpp
